force-app/main/default/objects/Campaign/fields/Event_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Event_Capacity__c</fullName>
    <label>Event Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>