force-app/main/default/objects/Campaign/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <label>Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cocktails</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>