force-app/main/default/objects/Campaign/fields/Event_Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_URL__c</fullName>
    <label>Event Location URL</label>
    <type>Url</type>
</CustomField>