force-app/main/default/objects/Campaign/fields/Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Date__c</fullName>
    <label>Next Activity Date</label>
    <type>Date</type>
</CustomField>