force-app/main/default/objects/Campaign/listViews/My_Inactive_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Inactive_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Inactive Campaigns</label>
</ListView>